Fix table clearance issues (looked fine on Firefox, terrible on Safari...)

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -379,6 +379,7 @@ td.center {
 	font-weight: bold;
 }
 
+table.sortable { clear: both; }
 
 /* Clear for IE 6/7 */
 .clearfix { zoom: 1; clear: left; }
